<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg"

    >

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Main">

<!--
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/curinfo"
        android:background="#85ADFF"
        android:id="@+id/monday"
        android:text="Måndag"
        />
-->

    <Spinner
        android:id="@+id/calSelect"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#e5e5e5"
        android:layout_marginBottom="5dp"
        />
    <TextView
        android:id="@+id/week"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_below="@id/calSelect"
        android:text="@string/week"
        android:textSize="16dp"
        android:gravity="center"
        />
    <TextView
        android:layout_width="25dp"
        android:layout_height="45dp"
        android:id="@+id/curinfo"
        android:layout_toRightOf="@id/week"
        android:layout_below="@id/calSelect"
        android:textSize="16dp"
        android:gravity="center"
        android:layout_marginEnd="5dp"
        />


    <ImageButton
        android:id="@+id/btnPrev"
        android:src="@drawable/prev"
        android:onClick="prevweek"
        android:layout_below="@id/calSelect"
        android:layout_toRightOf="@id/curinfo"
        android:layout_height="45dp"
        android:layout_width="45dp"
        android:background="#2dc46c"
        />
    <ImageButton
        android:id="@+id/btnNext"
        android:src="@drawable/next"
        android:onClick="nextweek"
        android:layout_below="@id/calSelect"
        android:layout_toEndOf="@id/btnPrev"
        android:layout_height="45dp"
        android:layout_width="45dp"
        android:layout_marginLeft="5dp"
        android:background="#2dc46c"

        />
    <ImageButton
        android:id="@+id/btnToday"
        android:src="@drawable/record"
        android:onClick="today"
        android:layout_below="@id/calSelect"
        android:layout_toEndOf="@id/btnNext"
        android:layout_height="45dp"
        android:layout_width="45dp"
        android:layout_marginLeft="5dp"
        android:background="#2dc46c"
        />
    <ImageButton
        android:id="@+id/btnPrint"
        android:src="@drawable/print3"
        android:onClick="printpreview"
        android:layout_below="@id/calSelect"
        android:layout_toEndOf="@id/btnToday"
        android:layout_height="45dp"
        android:layout_width="45dp"
        android:layout_marginLeft="5dp"
        android:text="@string/print"
        android:background="#2dc46c"
        />
    <ImageButton
        android:id="@+id/btnSettings"
        android:src="@drawable/write3"
        android:onClick="settings"
        android:layout_below="@id/calSelect"
        android:layout_toEndOf="@id/btnPrint"
        android:layout_marginLeft="5dp"
        android:layout_height="45dp"
        android:layout_width="45dp"
        android:text="@string/settings"
        android:background="#2dc46c"
        />
    <ImageView
        android:id="@+id/horline"
        android:layout_gravity="center_horizontal"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:layout_margin="3dp"
        android:layout_below="@id/btnPrev"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:src="@android:drawable/divider_horizontal_bright" />

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/horline"
        android:stretchColumns="*"
        >
        <!-- 2 columns -->
        <TableRow
            android:id="@+id/tableRow0"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
             >
            <TextView
                android:id="@+id/date0"
                android:layout_width="fill_parent"
                android:text="Date 0"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:background="#CC99FF"
                android:paddingRight="10dp"
                />
            <TextView
                android:id="@+id/textView0"
                android:layout_width="fill_parent"
                android:text="Row 0"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:background="#CC99FF"
                />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow11"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/act0"
                android:layout_width="fill_parent"
                android:layout_span="3"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="2dp"
                />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
        >
            <TextView
                android:id="@+id/date1"
                android:layout_width="fill_parent"
                android:text="Date 1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:background="#CC99FF"
                               />
            <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:text="Column 1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:background="#CC99FF"
                                />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/act1"
                android:layout_width="fill_parent"
                android:layout_span="3"
                android:textAppearance="?android:attr/textAppearanceMedium"
                />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/date2"
                android:layout_width="fill_parent"
                android:text="Date 2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:background="#CC99FF"
                                />
            <TextView
                android:id="@+id/textView2"
                android:layout_width="fill_parent"
                android:text="Column 1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:background="#CC99FF"
                                />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/act2"
                android:layout_width="fill_parent"
                android:layout_span="3"
                android:textAppearance="?android:attr/textAppearanceMedium"
                />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
             >

            <TextView
                android:id="@+id/date3"
                android:layout_width="fill_parent"
                android:text="Date 3"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:background="#CC99FF"
                                />
            <TextView
                android:id="@+id/textView3"
                android:layout_width="fill_parent"
                android:text="Column 1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:background="#CC99FF"
                                />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/act3"
                android:layout_width="fill_parent"
                android:layout_span="3"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="2dp"
                />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/date4"
                android:layout_width="fill_parent"
                android:text="Date 4"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:background="#CC99FF"
                                />
            <TextView
                android:id="@+id/textView4"
                android:layout_width="fill_parent"
                android:text="Column 1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:background="#CC99FF"
                                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/act4"
                android:layout_width="fill_parent"
                android:layout_span="3"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="2dp"
                />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/date5"
                android:layout_width="fill_parent"
                android:text="Date 5"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:background="#CC99FF"
                               />
            <TextView
                android:id="@+id/textView5"
                android:layout_width="fill_parent"
                android:text="Column 1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:background="#CC99FF"
                                />

        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/act5"
                android:layout_width="fill_parent"
                android:layout_span="3"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="2dp"

                />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/date6"
                android:layout_width="fill_parent"
                android:text="Date 6"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:background="#CC99FF"
                                />
            <TextView
                android:id="@+id/textView6"
                android:layout_width="fill_parent"
                android:text="Column 1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:background="#CC99FF"
                                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/act6"
                android:layout_width="fill_parent"
                android:layout_span="3"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="2dp"
                />
        </TableRow>
    </TableLayout>
</RelativeLayout>
</ScrollView>